--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: yellowgreen;
+  background: url("./images/background.jpg") no-repeat center fixed;
+  background-size: cover;
 }
 
 code {
